<resources>
    <string name="app_name">Мои Врачи</string>
    <string name="doctors">Врачи</string>
    <string name="appointments">Важная информация</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_doctor_card">Изменить</string>
    <string name="delete_doctor_card">Удалить</string>
    <string name="add_doctor_card">Кнопка добавления врача</string>
    <string name="dialog_name">Имя</string>
    <string name="dialog_speciality">Специальность</string>
    <string name="dialog_hospital">Медучреждение</string>
    <string name="dialog_phone">Номер телефона</string>
    <string name="dialog_cancel">отмена</string>
    <string name="dialog_approve">Принять</string>
    <string name="covid_19_info">Важная информация о COVID-19</string>
    <string name="go_to_site_button">Перейти</string>
</resources>