<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/dialog_doctor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/dialog_doctor_speciality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_speciality"
        android:inputType="text" />

    <EditText
        android:id="@+id/dialog_doctor_hospital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_hospital"
        android:inputType="text" />

    <EditText
        android:id="@+id/dialog_doctor_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_phone"
        android:inputType="text|phone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_approve"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_approve" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_cancel"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/dialog_cancel" />
    </LinearLayout>


</LinearLayout>