<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/change_doctor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/change_doctor_speciality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_speciality"
        android:inputType="text" />

    <EditText
        android:id="@+id/change_doctor_hospital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_hospital"
        android:inputType="text" />

    <EditText
        android:id="@+id/change_doctor_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_phone"
        android:inputType="text|phone" />

</LinearLayout>